# qufin

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: confluence_workflow.md  ibkr_setup.md  portfolio.md
notebooks/: 01_financial_markets_and_returns.ipynb  01_probability_statistics_basics.ipynb  02_linear_algebra_for_finance.ipynb  02_probability_and_statistics.ipynb  03_calculus_refresher.ipynb  03_linear_algebra.ipynb  04_calculus.ipynb  04_ordinary_differential_equations.ipynb  05_differential_equations.ipynb  06_regression_and_econometrics.ipynb  07_optimization.ipynb  08_stochastic_processes.ipynb  09_monte_carlo_methods.ipynb  10_technical_indicators.ipynb  12_market_microstructure.ipynb  15_garch_volatility.ipynb  16_realized_volatility.ipynb  18_momentum.ipynb  19_mean_reversion_ou.ipynb  20_cointegration_pairs.ipynb  21_markov_hmm.ipynb  23_fundamental_analysis.ipynb  26_options_pricing.ipynb  README.md  _gen_01_financial_markets_and_returns.py  _gen_06_regression_and_econometrics.py  _gen_07_optimization.py  _gen_08_stochastic_processes.py  _gen_09_monte_carlo_methods.py  _gen_10_technical_indicators.py  _gen_11_volume_distribution.py  _gen_12_market_microstructure.py  _gen_13_wyckoff_method.py  _gen_14_arima_forecasting.py  _gen_15_garch_volatility.py  _gen_16_realized_volatility.py  _gen_17_long_memory.py  _gen_18_momentum.py  _gen_19_mean_reversion_ou.py  _gen_20_cointegration_pairs.py  (+28 more)
scripts/: _common.py  analyze_selloff_opportunities.py  build_options_tutorial.py  check_alpaca_connection.py  ibkr_account.py  (+21 more)
(+323 files in other folders)
