[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qufin"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "polars>=1.0",
    "pyarrow>=16.0",
    "numba>=0.60",
    "yfinance>=0.2",
    "matplotlib>=3.9",
    "plotly>=5.22",
]

[dependency-groups]
dev = [
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "ruff>=0.4",
    "pyright>=1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qufin"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "NPY", "PD"]

[tool.ruff.lint.per-file-ignores]
# Notebooks use standard mathematical/financial notation (S, K, T, Sigma, Nd1 …)
# and exploratory long lines in labels/print statements are acceptable.
"notebooks/*.ipynb" = ["N8", "E501", "E702", "E731", "E741", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src"]
